samples/_failures_safe/1761786832_0e5bdc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50790f92.c: In function ‘main’:
./samples/SAFE/__tmp_50790f92.c:170:5: error: expected expression at end of input
  170 |     for (size_t i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_50790f92.c:170:5: error: expected declaration or statement at end of input
